// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders correctly with backgronudColor prop 1`] = `
<div
  className="box scrollable"
/>
`;

exports[`Box renders correctly with border prop 1`] = `
<div
  className="box scrollable border"
/>
`;

exports[`Box renders correctly with borderColor prop 1`] = `
<div
  className="box scrollable borderColorUiBorderColor"
/>
`;

exports[`Box renders correctly with children 1`] = `
<div
  className="box scrollable"
>
  Child
</div>
`;

exports[`Box renders correctly with empty props 1`] = `
<div
  className="box scrollable"
/>
`;

exports[`Box renders correctly with margin prop 1`] = `
<div
  className="box scrollable mSmall"
/>
`;

exports[`Box renders correctly with marginEnd prop 1`] = `
<div
  className="box scrollable meSmall"
/>
`;

exports[`Box renders correctly with marginStart prop 1`] = `
<div
  className="box scrollable msSmall"
/>
`;

exports[`Box renders correctly with marginTop prop 1`] = `
<div
  className="box scrollable mtSmall"
/>
`;

exports[`Box renders correctly with marginX prop 1`] = `
<div
  className="box scrollable mxSmall"
/>
`;

exports[`Box renders correctly with marginY prop 1`] = `
<div
  className="box scrollable mySmall"
/>
`;

exports[`Box renders correctly with padding prop 1`] = `
<div
  className="box scrollable pSmall"
/>
`;

exports[`Box renders correctly with paddingBottom prop 1`] = `
<div
  className="box scrollable pbSmall"
/>
`;

exports[`Box renders correctly with paddingEnd prop 1`] = `
<div
  className="box scrollable peSmall"
/>
`;

exports[`Box renders correctly with paddingStart prop 1`] = `
<div
  className="box scrollable psSmall"
/>
`;

exports[`Box renders correctly with paddingTop prop 1`] = `
<div
  className="box scrollable ptSmall"
/>
`;

exports[`Box renders correctly with paddingX prop 1`] = `
<div
  className="box scrollable pxSmall"
/>
`;

exports[`Box renders correctly with paddingY prop 1`] = `
<div
  className="box scrollable pySmall"
/>
`;

exports[`Box renders correctly with rounded prop 1`] = `
<div
  className="box scrollable roundedSmall"
/>
`;

exports[`Box renders correctly with shadow prop 1`] = `
<div
  className="box scrollable shadowSmall"
/>
`;

exports[`Box renders correctly with text prop 1`] = `
<div
  className="box scrollable textPrimaryTextColor"
/>
`;
